adding my grades

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<ul>
 			<li class="big">
 				<div class="dates">2012 - 2015</div>
-				<strong>Audio Systems Engineering, Queen Mary, University Of London</strong><br>
+				<strong>2:1 BEng (Hons) Audio Systems Engineering, Queen Mary, University Of London</strong><br>
 				This degree provided me with a strong programming background, with an emphasis on both group work and independent study and research.
 			</li>
 			<li class="big">
