--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</li>
 			<li class="big">
 				<div class="dates">July-September 2014</div>
-				<strong>Developer Intern at WriteLaTeX</strong>, working across a full Ruby-On-Rails stack. Completely redesigned the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
+				<strong>Developer Intern at WriteLaTeX / Overleaf</strong>, working across a full Ruby-On-Rails stack. Completely redesigned the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
 			</li>
 			<li class="big">
 				<div class="dates">Spring-Summer 2012</div>
@@ -73,31 +73,29 @@
 			<div class="third">
 				<h3>Programming</h3>
 				<ul>
+					<li><strong>Swift</strong> - advanced (<span class="heart">&#x1F60D;</span>)</li>
 					<li><strong>C</strong> - advanced</li>
 					<li><strong>C++</strong> - intermediate</li>
-					<li><strong>JUCE</strong> - intermediate</li>
 					<li><strong>Objective C</strong> - beginner</li>
-					<li><strong>Pure Data</strong> - advanced</li>
 					<li><strong>JavaScript</strong> - advanced</li>
 					<li><strong>Ruby/Rails</strong> - intermediate</li>
-					<li><strong>HTML & CSS</strong> - advanced</li>
+					<li><strong>HTML &amp; CSS</strong> - advanced</li>
 				</ul>
 			</div>
 			<div class="third">
 				<h3>Languages</h3>
 				<ul>
+					<li>English - fluent</li>
 					<li>Bulgarian - native</li>
 					<li>Russian - native</li>
-					<li>English - fluent</li>
 				</ul>
 			</div>
 			<div class="third">
 				<h3>Other</h3>
 				<ul>
-					<li>Adobe Photoshop / Gimp / Inkspace</li>
+					<li>Adobe Photoshop / Sketch </li>
 					<li>Git / Mercurial</li>
 					<li>LaTeX</li>
-					<li>MarkDown</li>
 				</ul>
 			</div>
 			<div class="clearfix"></div>
