new design, cutting down on everything.

--- a/index.html
+++ b/index.html
@@ -5,125 +5,123 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
-	<title>Hi there! :: dshr</title>
-	<link href='//fonts.googleapis.com/css?family=Dosis:400,600' rel='stylesheet' type='text/css'>
+	<title>I write code.</title>
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
 </head>
 <body>
-	<a name="top"></a>
-	<section class="home full-height">
-		<div class="center hello">
-			<img class="me" src="assets/images/hey-its-me.jpg" alt="That's me!">
-			<h1>Hi there!</h1>
-			<p>My name is Des and I am a developer!</p>
-			<div>
-				<a href="https://github.com/dshr" target="blank" class="none">
-					<img src="assets/images/github.png" class="icon" alt="A link to my GitHub page">
-				</a>
-				<a href="mailto:hristov.desislav@gmail.com" target="blank" class="none">
-					<img src="assets/images/email.png" class="icon email" alt="A link to my email">
-				</a>
-				<a href="https://twitter.com/_dshr_" target="blank" class="none">
-					<img src="assets/images/twitter.png" class="icon twitter" alt="A link to my Twitter account">
-				</a>
-			</div>
-		</div>
-	</section>
-	<section class="full-height">
-		<div class="center about">
-			<p class="large">I like code, I like music, and pretty much everything in between those two, especially using code to make music
-			<span class="smiley"> &#x1F604;</span></p>
-		</div>
-	</section>
-	<section>
-		<h2>My work experience</h2>
-		<ul>
-			<li class="big">
-				<div class="dates">November 2014 - Present</div>
-				<strong>Developer at TOAD London</strong>, a small creative agency in the heart of Dalston, with a diverse portfolio of projects, ranging from web design and development to content creation and marketing. Working in a team of 2-4 developers and 2 designers I got to develop a big in-house <a href="http://playsteak.com">web app</a> up to the stage of a private beta. It later went on to successfully secure a round of funding and is due to be released this autumn. I have also been taking part in some projects for the various clients of TOAD, ranging from financial technology companies and recruiters, all the way to comedy producers and event promoters.
-			</li>
-			<li class="big">
-				<div class="dates">July-September 2014</div>
-				<strong>Developer Intern at WriteLaTeX / Overleaf</strong>, working across a full Ruby-On-Rails stack. Completely redesigned the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
-			</li>
-			<li class="big">
-				<div class="dates">Spring-Summer 2012</div>
-				<strong>Courier in ICS Travel SPb</strong>, delivering travel documents to tourists at the Saint-Petersburg airport.
-			</li>
-		</ul>
-	</section>
-	<section>
-		<h2>My education</h2>
-		<ul>
-			<li class="big">
-				<div class="dates">2012 - 2015</div>
-				<strong>2:1 BEng (Hons) Audio Systems Engineering, Queen Mary, University Of London</strong><br>
-				This degree provided me with a strong programming background, with an emphasis on both group work and independent study and research.
-			</li>
-			<li class="big">
-				<div class="dates">2008 - 2012</div>
-				<strong>Audiovisual Technology, Saint-Petersburg State University Of Cinema and Television</strong><br>
-				This course gave me a solid foundation in analog electronics and engineering math.
-			</li>
-		</ul>
-	</section>
-	<section>
-		<h2>My skills</h2>
+	<section class="home full-height" name="top">
+		<h1>Desislav Hristov</h1>
 		<div>
-			<div class="third">
-				<h3>Programming</h3>
+			<p>Hi there!</p>
+			<p>My name is Des and I am a developer.</p>
+			<p>I like code, I like music, and using code to make music.</p>
+		</div>
+		<div class="links">
+			<a href="https://github.com/dshr" target="blank">github</a>
+			/
+			<a href="mailto:hristov.desislav@gmail.com">email</a>
+			/
+			<a href="https://twitter.com/_dshr_" target="blank">twitter</a>
+		</div>
+	</section>
+	<section>
+		<h2>Work experience</h2>
+		<ul>
+			<li class="big">
+				<h3>Developer at TOAD London</h3>
+				<p class="dates">November 2014 - Present</p>
+				<p>
+					<a href="https://toadlondon.com">TOAD</a> is a creative agency in the heart of Shoreditch, with a diverse portfolio of projects, ranging from app development to video production and everything in between. Working in such an environment means using a wide selection of tools, allowing me to work with both the trendiest <strong>JavaScript and NodeJS</strong> frameworks and plain old <strong>WordPress</strong>. During my time at TOAD I got into iOS development with <strong>Swift</strong>, creating and shipping two apps that are currently available on the App Store - <a href="https://itunes.apple.com/gb/app/onbeat-the-art-of-clubbing/id1046460886">OnBeat</a>, a clubbing event discovery app, and <a href="https://itunes.apple.com/gb/app/goalmouth-premier-league-predictions/id1093231381">Goalmouth</a>, a brand new football betting experience.
+				</p>
+			</li>
+			<li class="big">
+				<h3>
+					Developer Intern at <span class="no-wrap">Overleaf / WriteLaTeX</span>
+				</h3>
+				<p class="dates">July-September 2014</p>
+				<p>
+					Overleaf is an online collaborative platform for scientific writing based on LaTeX. During my time there I worked across a full <strong>Ruby-On-Rails</strong> stack using <strong>Ruby</strong> and the latest <strong>HTML5, CSS3 and JS</strong> technologies at the time. I designed and implemented the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
+				</p>
+			</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Education</h2>
+		<ul>
+			<li class="big">
+				<h3>Queen Mary University Of London</h3>
+				<h4>2:1 BEng (Hons) Audio Systems Engineering</h4>
+				<p class="dates">2012 - 2015</p>
+				<p>
+					This programme was a link between digital technologies and music, pretty much two of my biggest passions, which is why I chose it. It provided me with a strong programming foundation, with an emphasis on both <strong>group work</strong> and <strong>independent study and research</strong>, along with a firm grasp of <strong>real-time Digital Signals Processing</strong>.
+				</p>
+				<p>
+					For my final project I designed and implemented a tiny Virtual Analogue synthesiser. Using Vesa Välimäki's PolyBLEP algorithm, Antti Huovilainen's Moog Low-Pass filter model and lots of polynomial approximations, I successfully managed to run it on an ARM Cortex M4-based STM32F4Discovery board and get it to receive MIDI control signals. You can check out the source code at <a href="https://github.com/dshr/tinySynth">github.com/dshr/tinySynth</a>.
+				</p>
+			</li>
+			<li class="big">
+				<h3>Saint-Petersburg State University Of Cinema and Television</h3>
+				<h4>Audiovisual Technology</h4>
+				<p class="dates">2008 - 2012</p>
+				<p>
+					This was a thorough course into the technology behind moving image and sound. With a strong shift towards analogue cinema, this degree gave me a solid foundation in <strong>engineering mathematics, physics and analogue electronics.</strong>
+				</p>
+			</li>
+		</ul>
+	</section>
+	<section>
+		<h2>Skills</h2>
+		<div>
+			<div class="half">
+				<h4>Programming</h4>
 				<ul>
-					<li><strong>Swift</strong> - advanced (<span class="heart">&#x1F60D;</span>)</li>
 					<li><strong>C</strong> - advanced</li>
 					<li><strong>C++</strong> - intermediate</li>
-					<li><strong>Objective C</strong> - beginner</li>
+					<li><strong>Objective C</strong> - intermediate</li>
 					<li><strong>JavaScript</strong> - advanced</li>
-					<li><strong>Ruby/Rails</strong> - intermediate</li>
+					<li><strong>Ruby / Rails</strong> - intermediate</li>
+					<li><strong>Swift</strong> <span class="heart">&#x1F60D;</span> - advanced</li>
 					<li><strong>HTML &amp; CSS</strong> - advanced</li>
 				</ul>
 			</div>
-			<div class="third">
-				<h3>Languages</h3>
+			<div class="half">
+				<h4>Languages</h4>
 				<ul>
 					<li>English - fluent</li>
-					<li>Bulgarian - native</li>
-					<li>Russian - native</li>
+					<li>Bulgarian, Russian - native</li>
 				</ul>
-			</div>
-			<div class="third">
-				<h3>Other</h3>
+				<h4>Other</h4>
 				<ul>
 					<li>Adobe Photoshop / Sketch </li>
 					<li>Git / Mercurial</li>
-					<li>LaTeX</li>
+					<li>LaTeX / Markdown</li>
 				</ul>
 			</div>
 			<div class="clearfix"></div>
 		</div>
 	</section>
-	<section class="final full-height">
-		<div class="center cya">
-			<h2 class="large">Nice meeting you!</h2>
+	<section class="full-height">
+		<div>
+			<h2>Nice meeting you!</h2>
 			<p>
-				I'm currently based in London<br>
-				If you want to get in touch just use one of the links below:
+				I'm currently based in <span class="no-wrap">London, UK</span>
 			</p>
-			<div>
-				<a href="https://github.com/dshr" target="blank" class="none">
-					<img src="assets/images/github.png" class="icon big" alt=A link to my GitHub page"">
-				</a>
-				<a href="mailto:hristov.desislav@gmail.com" target="blank" class="none">
-					<img src="assets/images/email.png" class="icon big email" alt="A link to my email">
-				</a>
-				<a href="https://twitter.com/_dshr_" target="blank" class="none">
-					<img src="assets/images/twitter.png" class="icon twitter big" alt="A link to my Twitter account">
-				</a>
-			</div>
-			<div class="back-to-top large">
-				<a href="#top" class="icon none">
-					^
-				</a>
-			</div>
+			<p>
+				If you want to get in touch just use one of these links:<br>
+				<span class="links">
+					<a href="https://github.com/dshr" target="blank">github</a>
+					/
+					<a href="mailto:hristov.desislav@gmail.com">email</a>
+					/
+					<a href="https://twitter.com/_dshr_" target="blank">twitter</a>
+				</span>
+			</p>
+		</div>
+		<div class="back-to-top">
+			<a href="#top">
+				> back to top
+			</a>
 		</div>
 	</section>
 </body>
