copy and styling changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<h1>Desislav Hristov</h1>
 		<div>
 			<p>Hi there!</p>
-			<p>My name is Des and I am a developer.</p>
-			<p>I like code, I like music, and using code to make music.</p>
+			<p>
+				My name is Des and I am a developer.<br>
+				I like code, music, and using code to make music.
+			</p>
 		</div>
 		<div class="links">
 			<a href="https://github.com/dshr" target="blank">github</a>
