reverting back to old email

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="links">
 			<a href="https://github.com/dshr" target="blank">github</a>
 			/
-			<a href="mailto:hey@des.codes">email</a>
+			<a href="mailto:hristov.desislav@gmail.com">email</a>
 			/
 			<a href="https://twitter.com/_dshr_" target="blank">twitter</a>
 		</div>
@@ -114,7 +114,7 @@
 				<span class="links">
 					<a href="https://github.com/dshr" target="blank">github</a>
 					/
-					<a href="mailto:hey@des.codes">email</a>
+					<a href="mailto:hristov.desislav@gmail.com">email</a>
 					/
 					<a href="https://twitter.com/_dshr_" target="blank">twitter</a>
 				</span>
