--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<section class="home full-height" name="top">
 		<h1>Desislav Hristov</h1>
 		<div>
-			<p>Hi there!</p>
 			<p>
-				My name is Des and I am a developer.<br>
+				Hi there!<br>
+				My name is Des and I am a developer.<br class="no-mobile">
 				I like code, music, and using code to make music.
 			</p>
 		</div>
