--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Desislav Hristov's portfolio website">
+	<meta name="keywords" content="audio developer, developer, dsp developer, ios developer, music, programming, swift developer, web developer">
+	<meta name="author" content="Desislav Hristov">
 	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 	<title>I write code.</title>
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
