--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<div>
 			<h2>Nice meeting you!</h2>
 			<p>
-				I'm currently based in <span class="no-wrap">London, UK</span>
+				I'm currently based in <span class="no-wrap">St. Petersburg, Russia</span>
 			</p>
 			<p>
 				If you want to get in touch just use one of these links:<br>
