adding some links and anchor ids ⚓️

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
 </head>
 <body>
-	<section class="home full-height" name="top">
+	<section class="home full-height" id="top">
 		<h1>Desislav Hristov</h1>
 		<div>
 			<p>
@@ -30,7 +30,7 @@
 			<a href="https://twitter.com/_dshr_" target="blank">twitter</a>
 		</div>
 	</section>
-	<section>
+	<section id="and-works">
 		<h2>Work experience</h2>
 		<ul>
 			<li class="big">
@@ -46,12 +46,12 @@
 				</h3>
 				<p class="dates">July-September 2014</p>
 				<p>
-					Overleaf is an online collaborative platform for scientific writing based on LaTeX. During my time there I worked across a full <strong>Ruby-On-Rails</strong> stack using <strong>Ruby</strong> and the latest <strong>HTML5, CSS3 and JS</strong> technologies at the time. I designed and implemented the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
+					<a href="https://www.overleaf.com/">Overleaf</a> is an online collaborative platform for scientific writing based on LaTeX. During my time there I worked across a full <strong>Ruby-On-Rails</strong> stack using <strong>Ruby</strong> and the latest <strong>HTML5, CSS3 and JS</strong> technologies at the time. I designed and implemented the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
 				</p>
 			</li>
 		</ul>
 	</section>
-	<section>
+	<section id="and-studies">
 		<h2>Education</h2>
 		<ul>
 			<li class="big">
@@ -75,7 +75,7 @@
 			</li>
 		</ul>
 	</section>
-	<section>
+	<section id="and-stuff">
 		<h2>Skills</h2>
 		<div>
 			<div class="half">
