back to the `space-between`. also adding a workaround to the min-height-space-between bug like here http://stackoverflow.com/questions/42161458/is-there-a-bug-in-chrome-with-justify-content-space-between-and-min-height

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<section class="home full-height" id="top">
 		<h1>Desislav Hristov</h1>
-		<div>
+		<div class="intro">
 			<p>
 				Hi there!<br>
 				My name is Des and I am a developer.<br class="no-mobile">
