updating tags for better seo 🔎

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Desislav Hristov's portfolio website">
-	<meta name="keywords" content="audio developer, developer, dsp developer, ios developer, music, programming, swift developer, web developer">
+	<meta name="keywords" content="au, audio apps, audio developer, audio technology, audio units, c, c++, code, coder, coding, css, des codes, des hristov, desislav hristov, developer, digital music, dsp developer, html, ios, ios developer, javascript, js, juce, macos, music, music technology, objc, objective c, programmer, programming, swift, swift developer, vst, web developer">
 	<meta name="author" content="Desislav Hristov">
 	<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
 	<title>I write code.</title>
