adding some little design changes

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 		<ul>
 			<li class="big">
 				<h3>Developer at TOAD London</h3>
-				<p class="dates">November 2014 - Present</p>
+				<p class="dates">November 2014 — Present</p>
 				<p>
-					<a href="https://toadlondon.com">TOAD</a> is a creative agency in the heart of Shoreditch, with a diverse portfolio of projects, ranging from app development to video production and everything in between. Working in such an environment means using a wide selection of tools, allowing me to work with both the trendiest <strong>JavaScript and NodeJS</strong> frameworks and plain old <strong>WordPress</strong>. During my time at TOAD I got into iOS development with <strong>Swift</strong>, creating and shipping two apps that are currently available on the App Store - <a href="https://itunes.apple.com/gb/app/onbeat-the-art-of-clubbing/id1046460886">OnBeat</a>, a clubbing event discovery app, and <a href="https://itunes.apple.com/gb/app/goalmouth-premier-league-predictions/id1093231381">Goalmouth</a>, a brand new football betting experience.
+					<a href="https://toadlondon.com">TOAD</a> is a creative agency in the heart of Shoreditch, with a diverse portfolio of projects, ranging from app development to video production and everything in between. Working in such an environment means using a wide selection of tools, allowing me to work with both the trendiest <strong>JavaScript and NodeJS</strong> frameworks and plain old <strong>WordPress</strong>. During my time at TOAD I got into iOS development with <strong>Swift</strong>, creating and shipping two apps that are currently available on the App Store — <a href="https://itunes.apple.com/gb/app/onbeat-the-art-of-clubbing/id1046460886">OnBeat</a>, a clubbing event discovery app, and <a href="https://itunes.apple.com/gb/app/goalmouth-premier-league-predictions/id1093231381">Goalmouth</a>, a brand new football betting experience.
 				</p>
 			</li>
 			<li class="big">
 				<h3>
 					Developer Intern at <span class="no-wrap">Overleaf / WriteLaTeX</span>
 				</h3>
-				<p class="dates">July-September 2014</p>
+				<p class="dates">July — September 2014</p>
 				<p>
 					<a href="https://www.overleaf.com/">Overleaf</a> is an online collaborative platform for scientific writing based on LaTeX. During my time there I worked across a full <strong>Ruby-On-Rails</strong> stack using <strong>Ruby</strong> and the latest <strong>HTML5, CSS3 and JS</strong> technologies at the time. I designed and implemented the <a href="https://www.writelatex.com/space">referral awards system</a> from the ground up along with other front-end and back-end projects.
 				</p>
@@ -57,7 +57,7 @@
 			<li class="big">
 				<h3>Queen Mary University Of London</h3>
 				<h4>2:1 BEng (Hons) Audio Systems Engineering</h4>
-				<p class="dates">2012 - 2015</p>
+				<p class="dates">2012 — 2015</p>
 				<p>
 					This programme was a link between digital technologies and music, pretty much two of my biggest passions, which is why I chose it. It provided me with a strong programming foundation, with an emphasis on both <strong>group work</strong> and <strong>independent study and research</strong>, along with a firm grasp of <strong>real-time Digital Signals Processing</strong>.
 				</p>
@@ -68,7 +68,7 @@
 			<li class="big">
 				<h3>Saint-Petersburg State University Of Cinema and Television</h3>
 				<h4>Audiovisual Technology</h4>
-				<p class="dates">2008 - 2012</p>
+				<p class="dates">2008 — 2012</p>
 				<p>
 					This was a thorough course into the technology behind moving image and sound. With a strong shift towards analogue cinema, this degree gave me a solid foundation in <strong>engineering mathematics, physics and analogue electronics.</strong>
 				</p>
@@ -110,7 +110,7 @@
 		<div>
 			<h2>Nice meeting you!</h2>
 			<p>
-				I'm currently based in <span class="no-wrap">St. Petersburg, Russia</span>
+				I'm currently based in <span class="no-wrap">London, UK</span>
 			</p>
 			<p>
 				If you want to get in touch just use one of these links:<br>
