update employment data

--- a/index.html
+++ b/index.html
@@ -33,11 +33,18 @@
 	<section id="and-works">
 		<h2>Work experience</h2>
 		<ul>
+            <li class="big">
+                <h3>iOS Developer at Toggl Track</h3>
+                <p class="dates">August 2018 — October 2020</p>
+                <p>
+                    <a href="https://toggl.com/track/">Toggl Track</a> is the leading time tracking platform for enterprise and individual clients alike. Working in the mobile team there I got to take part in pushing the envelope of <strong>Xamarin</strong> cross-platform development, along with getting proficient with functional reactive programming (<strong>Rx</strong> is ♥️). Later on I became a part of the dedicated iOS team, working with the latest iOS tech like <strong>SwiftUI</strong> and <strong>Combine</strong>. You can check the Toggl Track mobile app out <a href="https://apps.apple.com/us/app/toggl/id1291898086">here</a>
+                </p>
+            </li>
 			<li class="big">
 				<h3>Developer at TOAD London</h3>
-				<p class="dates">November 2014 — Present</p>
+				<p class="dates">November 2014 — August 2018</p>
 				<p>
-					<a href="https://toadlondon.com">TOAD</a> is a creative agency in the heart of Shoreditch, with a diverse portfolio of projects, ranging from app development to video production and everything in between. Working in such an environment means using a wide selection of tools, allowing me to work with both the trendiest <strong>JavaScript and NodeJS</strong> frameworks and plain old <strong>WordPress</strong>. During my time at TOAD I got into iOS development with <strong>Swift</strong>, creating and shipping two apps that are currently available on the App Store — <a href="https://itunes.apple.com/gb/app/onbeat-the-art-of-clubbing/id1046460886">OnBeat</a>, a clubbing event discovery app, and <a href="https://itunes.apple.com/gb/app/goalmouth-premier-league-predictions/id1093231381">Goalmouth</a>, a brand new football betting experience.
+					<a href="https://toadlondon.com">TOAD</a> is a creative agency in the heart of Shoreditch, with a diverse portfolio of projects, ranging from app development to video production and everything in between. Working in such an environment means using a wide selection of tools, allowing me to work with both the trendiest <strong>JavaScript and NodeJS</strong> frameworks and plain old <strong>WordPress</strong>. During my time at TOAD I got into iOS development with <strong>Swift</strong>, creating and shipping several apps, most notable of which are <a href="https://itunes.apple.com/gb/app/onbeat-the-art-of-clubbing/id1046460886">OnBeat</a>, a clubbing event discovery app, and <a href="https://itunes.apple.com/gb/app/goalmouth-premier-league-predictions/id1093231381">Goalmouth</a>, a brand new football betting experience.
 				</p>
 			</li>
 			<li class="big">
