update skills and location

--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
 				<ul>
 					<li><strong>C</strong> - advanced</li>
 					<li><strong>C++</strong> - intermediate</li>
-					<li><strong>Objective C</strong> - intermediate</li>
-					<li><strong>JavaScript</strong> - advanced</li>
-					<li><strong>Ruby / Rails</strong> - intermediate</li>
-					<li><strong>Swift</strong> <span class="heart">&#x1F60D;</span> - advanced</li>
+                    <li><strong>Django / Python</strong> - intermediate</li>
 					<li><strong>HTML &amp; CSS</strong> - advanced</li>
+					<li><strong>JavaScript</strong> - advanced</li>
+					<li><strong>Objective C</strong> - intermediate</li>
+					<li><strong>Swift</strong> <span class="heart">&#x1F60D;</span> - advanced</li>
+					<li><strong>Ruby / Rails</strong> - intermediate</li>
 				</ul>
 			</div>
 			<div class="half">
@@ -117,7 +118,7 @@
 		<div>
 			<h2>Nice meeting you!</h2>
 			<p>
-				I'm currently based in <span class="no-wrap">London, UK</span>
+				I'm currently based in <span class="no-wrap">Saint Petersburg, Russia</span>
 			</p>
 			<p>
 				If you want to get in touch just use one of these links:<br>
